--- a/config/Reports/ELK_ОтчетПоЛогам.xml
+++ b/config/Reports/ELK_ОтчетПоЛогам.xml
@@ -2,28 +2,28 @@
 <MetaDataObject xmlns="http://v8.1c.ru/8.3/MDClasses" xmlns:app="http://v8.1c.ru/8.2/managed-application/core" xmlns:cfg="http://v8.1c.ru/8.1/data/enterprise/current-config" xmlns:cmi="http://v8.1c.ru/8.2/managed-application/cmi" xmlns:ent="http://v8.1c.ru/8.1/data/enterprise" xmlns:lf="http://v8.1c.ru/8.2/managed-application/logform" xmlns:style="http://v8.1c.ru/8.1/data/ui/style" xmlns:sys="http://v8.1c.ru/8.1/data/ui/fonts/system" xmlns:v8="http://v8.1c.ru/8.1/data/core" xmlns:v8ui="http://v8.1c.ru/8.1/data/ui" xmlns:web="http://v8.1c.ru/8.1/data/ui/colors/web" xmlns:win="http://v8.1c.ru/8.1/data/ui/colors/windows" xmlns:xen="http://v8.1c.ru/8.3/xcf/enums" xmlns:xpr="http://v8.1c.ru/8.3/xcf/predef" xmlns:xr="http://v8.1c.ru/8.3/xcf/readable" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.5">
 	<Report uuid="fecf76b0-7a7b-40a8-9649-70c9616db0f7">
 		<InternalInfo>
-			<xr:GeneratedType name="ReportObject.ПолучениеЛогов" category="Object">
+			<xr:GeneratedType name="ReportObject.ELK_ОтчетПоЛогам" category="Object">
 				<xr:TypeId>f50d78fa-8654-4d28-82a1-49842008f22c</xr:TypeId>
 				<xr:ValueId>ca36b865-f8ff-4556-a1ed-177c722218f7</xr:ValueId>
 			</xr:GeneratedType>
-			<xr:GeneratedType name="ReportManager.ПолучениеЛогов" category="Manager">
+			<xr:GeneratedType name="ReportManager.ELK_ОтчетПоЛогам" category="Manager">
 				<xr:TypeId>e42caaf3-b089-4161-a63a-afb77498abfd</xr:TypeId>
 				<xr:ValueId>070ae321-31f8-4174-9fb1-8bf9727ceadf</xr:ValueId>
 			</xr:GeneratedType>
 		</InternalInfo>
 		<Properties>
-			<Name>ПолучениеЛогов</Name>
+			<Name>ELK_ОтчетПоЛогам</Name>
 			<Synonym>
 				<v8:item>
 					<v8:lang>ru</v8:lang>
-					<v8:content>Получение логов</v8:content>
+					<v8:content>Отчет по логам</v8:content>
 				</v8:item>
 			</Synonym>
 			<Comment/>
 			<UseStandardCommands>true</UseStandardCommands>
-			<DefaultForm>Report.ПолучениеЛогов.Form.ФормаОтчета</DefaultForm>
+			<DefaultForm>Report.ELK_ОтчетПоЛогам.Form.ФормаОтчета</DefaultForm>
 			<AuxiliaryForm/>
-			<MainDataCompositionSchema>Report.ПолучениеЛогов.Template.Макет</MainDataCompositionSchema>
+			<MainDataCompositionSchema>Report.ELK_ОтчетПоЛогам.Template.Макет</MainDataCompositionSchema>
 			<DefaultSettingsForm/>
 			<AuxiliarySettingsForm/>
 			<DefaultVariantForm/>
@@ -36,11 +36,11 @@
 		<ChildObjects>
 			<TabularSection uuid="8d1b8931-43eb-4911-91ac-f6ea1f197307">
 				<InternalInfo>
-					<xr:GeneratedType name="ReportTabularSection.ПолучениеЛогов.тзРезультат" category="TabularSection">
+					<xr:GeneratedType name="ReportTabularSection.ELK_ОтчетПоЛогам.тзРезультат" category="TabularSection">
 						<xr:TypeId>a4284a20-5c9c-44e0-9828-b8acb9051c28</xr:TypeId>
 						<xr:ValueId>997cecb0-a5cf-4be7-84e4-cf4a886df720</xr:ValueId>
 					</xr:GeneratedType>
-					<xr:GeneratedType name="ReportTabularSectionRow.ПолучениеЛогов.тзРезультат" category="TabularSectionRow">
+					<xr:GeneratedType name="ReportTabularSectionRow.ELK_ОтчетПоЛогам.тзРезультат" category="TabularSectionRow">
 						<xr:TypeId>546b3190-cf99-495c-bd84-d5512133e989</xr:TypeId>
 						<xr:ValueId>17e0e026-7e3b-4537-8445-3288264003de</xr:ValueId>
 					</xr:GeneratedType>
